# BasicHaskellApplication

./: BasicApp.cabal
src/: main.hs
src/Basic/: addition.hs
src/Basic/Addition/: addition.hs
test/Basic/: AdditionSpec.hs
