name:                basicApp
version:             0.0.0
synopsis:            Basic app to learn haskell
homepage:            none
license:             PublicDomain
author:              shimanekb
maintainer:          brandon.shimanek@hotmail.com
build-type:          Simple 
cabal-version:       >=1.10


executable BasicApp
  main-is:  Main.hs           
  other-modules:  Basic.Addition 
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs: src
  default-language:    Haskell2010
  
test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test, src
  main-is:
      Spec.hs
  build-depends:
    base >=4.7 && <4.8
    , hspec   == 2.*